fix linter and apply most of suggestions
