# lib/database/models/category.js
@@ -1,10 +1,8 @@
-'use strict'
-
-const { Model } = require('objection')
+const { Model } = require('objection');
 
 class Category extends Model {
   static get tableName() {
-    return 'categories'
+    return 'categories';
   }
 
   static get jsonSchema() {
@@ -14,12 +12,11 @@ class Category extends Model {
       properties: {
         id: { type: 'integer' },
         name: { type: 'string', minLength: 3 },
-      }
-    }
+      },
+    };
   }
 
   static get relationMappings() {
-
     const Product = require('./product');
 
     return {
@@ -28,11 +25,11 @@ class Category extends Model {
         modelClass: Product,
         join: {
           from: `${Category.tableName}.id`,
-          to: `${Product.tableName}.category_id`
-        }
-      }
-    }
+          to: `${Product.tableName}.category_id`,
+        },
+      },
+    };
   }
 }
 
-module.exports = Category
+module.exports = Category;
