# lib/routes/categories/list.js
@@ -1,5 +1,3 @@
-'use strict';
-
 const { authHandlerSchema } = require('../../auth/authHandlerSchema');
 
 module.exports = {
@@ -9,8 +7,8 @@ module.exports = {
     description: 'Get list of all categories available and the number of available product',
     tags: ['categories'],
     querystring: {
-      page: { type: 'number', 'minimum': 0 },
-      size: { type: 'number', 'minimum': 1 }
+      page: { type: 'number', minimum: 0 },
+      size: { type: 'number', minimum: 1 },
     },
     response: {
       200: {
@@ -24,24 +22,23 @@ module.exports = {
               properties: {
                 id: { type: 'number' },
                 name: { type: 'string' },
-                productCount: { type: 'number' }
-              }
+                productCount: { type: 'number' },
+              },
             },
           },
-          total: { type: 'number' }
-        }
+          total: { type: 'number' },
+        },
       },
-    }
+    },
   },
   preHandler: authHandlerSchema.none,
   handler: async (request, reply) => {
-
     const { categoryService } = request.fastify;
 
-    const { page, size } = request.query
+    const { page, size } = request.query;
 
-    const categories = await categoryService.listAllCategories({ page, size })
+    const categories = await categoryService.listAllCategories({ page, size });
 
     return reply.code(200).send(categories);
-  }
-}
+  },
+};
