# swagger-api.yaml
@@ -5,6 +5,58 @@ info:
   version: 1.0.0
 definitions: {}
 paths:
+  /v1/dummy:
+    get:
+      description: It's only a dummy route
+      tags:
+        - dummy
+      responses:
+        "200":
+          description: Default Response
+  /v1/categories/list:
+    get:
+      description: Get list of all categories available and the number of available product
+      tags:
+        - categories
+      parameters:
+        - type: number
+          minimum: 0
+          required: false
+          in: query
+          name: page
+        - type: number
+          minimum: 1
+          required: false
+          in: query
+          name: size
+      responses:
+        "200":
+          description: Returns list with info about products
+          schema:
+            description: Returns list with info about products
+            type: object
+            properties:
+              results:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: number
+                    name:
+                      type: string
+                    productCount:
+                      type: number
+              total:
+                type: number
+  /v1/health:
+    get:
+      description: Get health status
+      tags:
+        - health
+      responses:
+        "200":
+          description: Default Response
   /v1/products/list:
     get:
       description: Get list of products
@@ -61,55 +113,3 @@ paths:
                       type: string
               total:
                 type: number
-  /v1/dummy:
-    get:
-      description: It's only a dummy route
-      tags:
-        - dummy
-      responses:
-        "200":
-          description: Default Response
-  /v1/categories/list:
-    get:
-      description: Get list of all categories available and the number of available product
-      tags:
-        - categories
-      parameters:
-        - type: number
-          minimum: 0
-          required: false
-          in: query
-          name: page
-        - type: number
-          minimum: 1
-          required: false
-          in: query
-          name: size
-      responses:
-        "200":
-          description: Returns list with info about products
-          schema:
-            description: Returns list with info about products
-            type: object
-            properties:
-              results:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: number
-                    name:
-                      type: string
-                    productCount:
-                      type: number
-              total:
-                type: number
-  /v1/health:
-    get:
-      description: Get health status
-      tags:
-        - health
-      responses:
-        "200":
-          description: Default Response
